--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SiGeSe Movil</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configuración</string>
     <string name="List_Clientes">CLIENTES</string>
     <string name="List_Equipos">EQUIPOS</string>
     <string name="List_Tecnicos">TECNICOS</string>
