--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Configuración</string>
-    <string name="List_Clientes">CLIENTES</string>
+    <string name="List_Polizas">Pólizas</string>
     <string name="List_Equipos">EQUIPOS</string>
     <string name="List_Tecnicos">TECNICOS</string>
     <string name="List_OrdenServicios">O.S.</string>
@@ -31,24 +31,13 @@
     <string name="cliente_telefono_label">Telefono:</string>
     <string name="cliente_email_label">Email:</string>
 
-
-    <string name="repuesto_tipoRepuesto_label">Tipo Repuesto:</string>
-    <string name="repuesto_modelo_label">Modelo:</string>
-    <string name="repuesto_descripcion_label">Descripción:</string>
-    <string name="repuesto_fechaArribo_label">fecha arribo:</string>
-    <string name="repuesto_costo_label">Costo:</string>
-    <string name="repuesto_cantidad_label">Cantidad:</string>
-
-
-    <string name="orden_numero_label">Número:</string>
-    <string name="orden_tecnico_label">Tecnico:</string>
-    <string name="orden_cliente_label">Cliente:</string>
-    <string name="orden_equipo_label">Equipo:</string>
-    <string name="orden_fechaHora_label">Fecha:</string>
-    <string name="orden_falla_label">Falla:</string>
-    <string name="orden_importe_label">Importe:</string>
-    <string name="orden_comision_label">Comisión:</string>
-    <string name="orden_estado_label">Estado:</string>
-    <string name="orden_garantia_label">Garantia:</string>
+    <string name="poliza_numero_label">Póliza número:</string>
+    <string name="poliza_importe_total_label">Póliza importe total:</string>
+    <string name="poliza_compania_label">Póliza compañía:</string>
+    <string name="poliza_cliente_label">Póliza cliente:</string>
+    <string name="poliza_fecha_emision_label">Fecha emisión:</string>
+    <string name="poliza_fecha_vigencia_label">Fecha vigencia:</string>
+    <string name="poliza_fecha_vencimiento_label">Fecha vencimiento:</string>
+    <string name="poliza_dias_restantes_label">Días restantes para vencer:</string>
 
 </resources>
